--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "jeroennoten/laravel-adminlte": "^3.4",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1",
-        "laravellegends/pt-br-validator": "^7.0"
+        "laravel/ui": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
